# gald3r_platform_warp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PLATFORM_CAPABILITY_MATRIX.md  PLATFORM_SUPPORT.html  READINESS.md  README.md  instructions_existing_project.md  instructions_new_project.md
project_template/: .gitignore  AGENTS.md  (+3 more)
project_template/.gald3r_sys/engine/: .gitignore  README.md  SYSTEMS.md  provision_engine.ps1  provision_engine.sh  pyproject.toml
project_template/.gald3r_sys/engine/src/gald3r/: __init__.py  __main__.py  config.py  coordination_notify.py  core.py  crash.py  db.py  debug.py  duckdb_projection.py  home.py  ids.py  install.py  merge.py  migration.py  migration_scan.py  provision.py  run_state.py  scaffold.py  store.py  telemetry.py  user_config.py
project_template/.gald3r_sys/engine/src/gald3r/adapters/: cli.py  mcp.py
project_template/.gald3r_sys/engine/src/gald3r/data/: entitlements.example.json
project_template/.gald3r_sys/engine/src/gald3r/entitlements/: __init__.py  evaluator.py  loader.py  model.py  tiers.py
project_template/.gald3r_sys/engine/src/gald3r/prompts/: __init__.py
project_template/.gald3r_sys/engine/src/gald3r/schema/: __init__.py  status.py  task.py
project_template/.gald3r_sys/engine/tests/: conftest.py  test_bugs.py  test_constraints_subsystems.py  test_doctor.py  test_features_prds.py  test_goals.py  test_ideas_vocab.py  test_inbox.py  test_platform.py  test_prompts.py  test_release.py  test_roundtrip.py  test_sync.py  test_tasks.py  test_tier.py  test_utils.py  test_vault.py  test_workspace.py
(+379 files in other folders)
