[project]
name = "gald3r"
version = "2.1.1"
description = "gald3r engine — file-first agent OS (tier-gated, Mode A pure core): 12 file-backed systems + the prompt/judgment layer, over CLI + MCP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
gald3r = "gald3r.adapters.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "mcp>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gald3r"]
